# chatterbox-indic-lora

./: README.md  pyproject.toml
src/chatterbox/: mtl_tts.py
