[project]
name = "chatterbox-tts"
version = "0.1.7"
description = "Chatterbox: Open Source TTS and Voice Conversion by Resemble AI"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "resemble-ai", email = "engineering@resemble.ai"}
]
dependencies = [
    # ── PyTorch is NOT listed here ──
    # Install it FIRST for your GPU before installing this package:
    #   pip install torch torchaudio --index-url https://download.pytorch.org/whl/cu128  # Blackwell/50-series
    #   pip install torch torchaudio --index-url https://download.pytorch.org/whl/cu124  # Ampere/Ada/40-series
    #   pip install torch torchaudio                                                      # CPU only
    "numpy>=1.24.0,<2.0.0; python_version < '3.13'",
    "numpy>=2.0.0; python_version >= '3.13'",
    "librosa==0.11.0",
    "s3tokenizer",
    "transformers>=4.40.0",
    "diffusers>=0.29.0",
    "resemble-perth @ git+https://github.com/resemble-ai/Perth.git@master",
    "conformer==0.3.2",
    "safetensors>=0.4.0",
    "spacy-pkuseg",
    "pykakasi==2.3.0",
    "gradio>=4.0.0",
    "pyloudnorm",
    "omegaconf",
    "huggingface_hub>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/resemble-ai/chatterbox"
Repository = "https://github.com/resemble-ai/chatterbox"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

